Added basic widgets and Map working with mapbox api